Integrated Serilog to backend projects

--- a/src/RuneGlossary.Resurrected/appsettings.json
+++ b/src/RuneGlossary.Resurrected/appsettings.json
@@ -1,9 +1,38 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Usings": [ "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "GrafanaLoki",
+        "Args": {
+          "Uri": "https://promtail.mihben.work",
+          "PropertiesAsLabels": [
+            "Application",
+            "Environment",
+            "level"
+          ]
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "RuneGlossary.Resurrected",
+      "Environment": "Production"
     }
   },
+
   "AllowedHosts": "*"
 }
