--- a/src/RuneGlossary.Resurrected/Properties/launchSettings.json
+++ b/src/RuneGlossary.Resurrected/Properties/launchSettings.json
@@ -1,4 +1,14 @@
-﻿{
+{
+  "profiles": {
+    "RuneGlossary.Resurrected": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5110"
+    }
+  },
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -6,26 +16,6 @@
     "iisExpress": {
       "applicationUrl": "http://localhost:40926",
       "sslPort": 0
-    }
-  },
-  "profiles": {
-    "RuneGlossary.Resurrected": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5185",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
     }
   }
 }
