--- a/src/RuneGlossary/appsettings.Development.json
+++ b/src/RuneGlossary/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "Services": {
+    "Resurrected": {
+      "BaseAddress": "http://localhost:5110"
+    }
+  },
+
   "Serilog": {
     "Properties": {
       "Environment": "Develop"
