--- a/src/RuneGlossary/appsettings.json
+++ b/src/RuneGlossary/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Services": {
+    "Resurrected": {
+      "BaseAddress": "",
+      "Path": "api"
+    }
+  },
+
   "Serilog": {
     "Usings": [ "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
     "MinimumLevel": {
