--- a/src/RuneGlossary.Application/RuneGlossary.Application.csproj
+++ b/src/RuneGlossary.Application/RuneGlossary.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="STrain.CQS" Version="1.0.0-rc.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RuneGlossary.Api\RuneGlossary.Api.csproj" />
+    <ProjectReference Include="..\RuneGlossary.Resurrected.Api\RuneGlossary.Resurrected.Api.csproj" />
+  </ItemGroup>
+
 </Project>
