--- a/src/RuneGlossary.Client.WASM/RuneGlossary.Client.WASM.csproj
+++ b/src/RuneGlossary.Client.WASM/RuneGlossary.Client.WASM.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
+    <PackageReference Include="STrain.CQS.Blazor.Lightinject" Version="1.0.0-rc.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RuneGlossary.Api\RuneGlossary.Api.csproj" />
   </ItemGroup>
 
 </Project>
