--- a/src/RuneGlossary.Resurrected.Api/RuneGlossary.Resurrected.Api.csproj
+++ b/src/RuneGlossary.Resurrected.Api/RuneGlossary.Resurrected.Api.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="STrain.CQS.Api" Version="1.0.0-rc.1" />
+  </ItemGroup>
+
 </Project>
