--- a/src/RuneGlossary.Resurrected/RuneGlossary.Resurrected.csproj
+++ b/src/RuneGlossary.Resurrected/RuneGlossary.Resurrected.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.4.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.0.0" />
+    <PackageReference Include="STrain.CQS.NetCore.LigtInject" Version="1.0.0-rc.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RuneGlossary.Resurrected.Application\RuneGlossary.Resurrected.Application.csproj" />
   </ItemGroup>
 
 </Project>
