Integrated ef core

--- a/src/RuneGlossary.Resurrected/appsettings.Development.json
+++ b/src/RuneGlossary.Resurrected/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  "Database": "Host=mihben.work;Username=postgres;Password=AaZ9SGvNyEjsBuzc;Database=rune_glossary-dev",
+
   "Serilog": {
     "Properties": {
       "Environment": "Develop"
