--- a/src/RuneGlossary.Resurrected.Api/RuneGlossary.Resurrected.Api.csproj
+++ b/src/RuneGlossary.Resurrected.Api/RuneGlossary.Resurrected.Api.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="STrain.CQS.Api" Version="1.0.0-rc.1" />
   </ItemGroup>
 
