--- a/src/RuneGlossary.Resurrected/RuneGlossary.Resurrected.csproj
+++ b/src/RuneGlossary.Resurrected/RuneGlossary.Resurrected.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.0.0" />
     <PackageReference Include="STrain.CQS.NetCore.LigtInject" Version="1.0.0-rc.1" />
@@ -15,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RuneGlossary.Resurrected.Application\RuneGlossary.Resurrected.Application.csproj" />
+    <ProjectReference Include="..\RuneGlossary.Resurrected.Infrastructure\RuneGlossary.Resurrected.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
