--- a/src/RuneGlossary.Resurrected/appsettings.json
+++ b/src/RuneGlossary.Resurrected/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "Database": "Host=mihben.work;Username=postgres;Password=AaZ9SGvNyEjsBuzc;Database=rune_glossary",
+
   "Serilog": {
     "Usings": [ "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
     "MinimumLevel": {
