--- a/src/RuneGlossary.Resurrected.Infrastructure/RuneGlossary.Resurrected.Infrastructure.csproj
+++ b/src/RuneGlossary.Resurrected.Infrastructure/RuneGlossary.Resurrected.Infrastructure.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.9" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
+    <PackageReference Include="STrain.Core" Version="1.0.0-rc.2" />
   </ItemGroup>
 
 </Project>
