Started implement get runes

--- a/src/RuneGlossary.Resurrected.Application/RuneGlossary.Resurrected.Application.csproj
+++ b/src/RuneGlossary.Resurrected.Application/RuneGlossary.Resurrected.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RuneGlossary.Resurrected.Api\RuneGlossary.Resurrected.Api.csproj" />
+    <ProjectReference Include="..\RuneGlossary.Resurrected.Infrastructure\RuneGlossary.Resurrected.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
