--- a/src/RuneGlossary.Test.Unit/RuneGlossary.Test.Unit.csproj
+++ b/src/RuneGlossary.Test.Unit/RuneGlossary.Test.Unit.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="bunit" Version="1.10.14" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
