Used async sync for serilog

--- a/src/RuneGlossary.Resurrected/appsettings.json
+++ b/src/RuneGlossary.Resurrected/appsettings.json
@@ -2,7 +2,7 @@
   "Database": "Host=mihben.work;Username=postgres;Password=AaZ9SGvNyEjsBuzc;Database=rune_glossary",
 
   "Serilog": {
-    "Usings": [ "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
+    "Usings": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
@@ -10,22 +10,29 @@
         "System": "Warning"
       }
     },
-    "WriteTo": [
+    "Writeto": [
       {
-        "Name": "Console",
+        "Name": "Async",
         "Args": {
-          "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}",
-          "RestrictedToMinimumLevel": "Information"
-        }
-      },
-      {
-        "Name": "GrafanaLoki",
-        "Args": {
-          "Uri": "https://promtail.mihben.work",
-          "PropertiesAsLabels": [
-            "Application",
-            "Environment",
-            "level"
+          "configure": [
+            {
+              "Name": "Console",
+              "Args": {
+                "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}",
+                "RestrictedToMinimumLevel": "Verbose"
+              }
+            },
+            {
+              "Name": "GrafanaLoki",
+              "Args": {
+                "Uri": "https://promtail.mihben.work",
+                "PropertiesAsLabels": [
+                  "Application",
+                  "Environment",
+                  "level"
+                ]
+              }
+            }
           ]
         }
       }
