Updated STrain for handling collection query parameter

--- a/src/RuneGlossary.Resurrected/appsettings.json
+++ b/src/RuneGlossary.Resurrected/appsettings.json
@@ -2,7 +2,7 @@
   "Database": "Host=mihben.work;Username=postgres;Password=AaZ9SGvNyEjsBuzc;Database=rune_glossary",
 
   "Serilog": {
-    "Usings": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
+    "Usings": [ "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
@@ -14,6 +14,7 @@
       {
         "Name": "Async",
         "Args": {
+          "RestrictedToMinimumLevel": "Verbose",
           "configure": [
             {
               "Name": "Console",
@@ -26,6 +27,7 @@
               "Name": "GrafanaLoki",
               "Args": {
                 "Uri": "https://promtail.mihben.work",
+                "restrictedToMinimumLevel": "Verbose",
                 "PropertiesAsLabels": [
                   "Application",
                   "Environment",
@@ -35,7 +37,7 @@
             }
           ]
         }
-      }
+      }      
     ],
     "Enrich": [ "FromLogContext" ],
     "Properties": {
