Integrated rune words to frontend

--- a/src/RuneGlossary.Resurrected/appsettings.json
+++ b/src/RuneGlossary.Resurrected/appsettings.json
@@ -2,7 +2,7 @@
   "Database": "Host=mihben.work;Username=postgres;Password=AaZ9SGvNyEjsBuzc;Database=rune_glossary",
 
   "Serilog": {
-    "Usings": [ "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
+    "Usings": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
@@ -14,7 +14,6 @@
       {
         "Name": "Async",
         "Args": {
-          "RestrictedToMinimumLevel": "Verbose",
           "configure": [
             {
               "Name": "Console",
