--- a/src/RuneGlossary/appsettings.json
+++ b/src/RuneGlossary/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "Serilog": {
-    "Usings": [ "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
+    "Usings": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console", "Serilog.Sinks.GrafanaLoki" ],
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
@@ -17,19 +17,26 @@
     },
     "WriteTo": [
       {
-        "Name": "Console",
+        "Name": "Async",
         "Args": {
-          "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "GrafanaLoki",
-        "Args": {
-          "Uri": "https://promtail.mihben.work",
-          "PropertiesAsLabels": [
-            "Application",
-            "Environment",
-            "level"
+          "configure": [
+            {
+              "Name": "Console",
+              "Args": {
+                "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+              }
+            },
+            {
+              "Name": "GrafanaLoki",
+              "Args": {
+                "Uri": "https://promtail.mihben.work",
+                "PropertiesAsLabels": [
+                  "Application",
+                  "Environment",
+                  "level"
+                ]
+              }
+            }
           ]
         }
       }
