--- a/src/RuneGlossary/RuneGlossary.csproj
+++ b/src/RuneGlossary/RuneGlossary.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.4.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.0.0" />
     <PackageReference Include="STrain.CQS.NetCore.LigtInject" Version="1.0.0-rc.5" />
