--- a/src/RuneGlossary.Resurrected.Api/RuneGlossary.Resurrected.Api.csproj
+++ b/src/RuneGlossary.Resurrected.Api/RuneGlossary.Resurrected.Api.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="STrain.CQS.Api" Version="1.0.0-rc.2" />
+    <PackageReference Include="STrain.CQS.Api" Version="1.0.0-rc.5" />
   </ItemGroup>
 
 </Project>
