--- a/src/RuneGlossary.Resurrected/RuneGlossary.Resurrected.csproj
+++ b/src/RuneGlossary.Resurrected/RuneGlossary.Resurrected.csproj
@@ -11,8 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.0.0" />
-    <PackageReference Include="STrain.CQS.NetCore.LigtInject" Version="1.0.0-rc.2" />
+    <PackageReference Include="STrain.CQS.NetCore.LigtInject" Version="1.0.0-rc.5" />
   </ItemGroup>
 
   <ItemGroup>
