Finished rune word styleing

--- a/src/RuneGlossary.Client.WASM/RuneGlossary.Client.WASM.csproj
+++ b/src/RuneGlossary.Client.WASM/RuneGlossary.Client.WASM.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
     <PackageReference Include="Blazored.Modal" Version="7.0.0" />
+    <PackageReference Include="CoreCLR-NCalc" Version="2.2.110" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
     <PackageReference Include="STrain.CQS.Blazor.Lightinject" Version="1.0.0-rc.5" />
